--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"install_plugin": "sh ./scripts/updatePlugin.sh $npm_package_name"
+		"transfer": "sh ./scripts/install.sh $npm_package_name"
 	},
 	"keywords": [],
 	"author": "",
